# GrannyNorman

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/theb0ardside/grannynorman/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioEngine.cpp  AudioEngine.h  CMakeLists.txt  DefJams.h  EnvelopeGenerator.cpp  EnvelopeGenerator.h  Event.h  IRenderableAudio.h  LinkManager.cpp  LinkManager.h  SampleFileManager.cpp  SampleFileManager.h  SamplePlayer.cpp  SamplePlayer.h  SoundGenerator.cpp  SoundGenerator.h  TimingData.h  WavData.cpp  WavData.h  defjams.h  native-lib.cpp
app/src/main/java/com/theb0ardside/grannynorman/: MainActivity.java  Utilz.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/test/java/com/theb0ardside/grannynorman/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
